sass/home/_title.scss
@use "../../themes/ametrine/sass/abstracts/functions" as *;

@font-face {
  font-style: normal;
  font-weight: 400;
  src: url("/home/fonts/pacifico.woff2") format("woff2");
  font-family: "Pacifico";
  font-display: swap;
  font-synthesis: none;
  unicode-range:
    0044, 0061, 0076, 0069, 0064, 0020, 004C, 0061, 0070, 0073, 0068, 0069, 006E;
}

#david-lapshin {
  --shift: #{rpx(3)};
  filter: url("#squiggly-1");
  animation: squiggly 0.3s step-end infinite;
  transition: var(--transition-bezier);
  margin: 0;
  margin-block: 0 3rem;
  font-weight: 400;
  font-size: 5rem;
  font-family: "Pacifico";
  letter-spacing: 0;
  user-select: none;
  text-decoration: none;

  &:hover,
  &:active {
    color: #9bdbf5;
  }

  &:hover {
    // Dashie!
    transform: translate(
      calc(var(--shift) * 3),
      calc(calc(var(--shift) * -1) * 3)
    );
    text-shadow:
      calc(var(--shift) * -1) var(--shift) #1b98d1,
      calc((var(--shift) * -1) * 2) calc(var(--shift) * 2) #fde85f,
      calc((var(--shift) * -1) * 3) calc(var(--shift) * 3) #ec4141;
  }

  &:active {
    --shift: #{rpx(-3)}; // Invert direction
    // 20% cooler
    transform: translate(
      calc(var(--shift) * 3),
      calc(calc(var(--shift) * -1) * 3)
    );
  }

  @media only screen and (max-width: 960px) {
    margin: 2rem auto 2.5rem;
    text-align: center;
  }

  @media only screen and (max-width: 480px) {
    font-size: 3.375rem;
  }

  @keyframes squiggly {
    from {
      filter: url("#squiggly-1");
    }

    33% {
      filter: url("#squiggly-2");
    }

    66% {
      filter: url("#squiggly-3");
    }

    // Last step is skipped, thus it's not set
  }
}

